--- a/app/src/main/res/layout/play_zone.xml
+++ b/app/src/main/res/layout/play_zone.xml
@@ -8,6 +8,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:visibility="gone"
+        android:spinnerMode="dialog"
+        android:entries="@array/level"
+        android:id="@+id/levelselect">
+    </Spinner>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
