stats activity added
-variables redefined
-new activities created
-graphs needs to be added in stats xml file

--- a/app/src/main/res/layout/front_screen.xml
+++ b/app/src/main/res/layout/front_screen.xml
@@ -23,10 +23,11 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:id="@+id/single_player"
-        android:layout_weight="0.1"
-        android:text="SINGLE PLAYER" />
+        android:layout_weight="0.01"
+        android:textAllCaps="false"
+        android:text="Single Player" />
 
     <Button
         android:layout_margin="5dp"
@@ -34,9 +35,10 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:id="@+id/multi_player"
-        android:layout_weight="0.1"
-        android:text="MULTIPLAYER"/>
+        android:layout_weight="0.01"
+        android:textAllCaps="false"
+        android:text="Multiplayer"/>
 
 </LinearLayout>
