--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="myblue">#33CCFF</color>
+    <color name="myred">#ff0033</color>
+    <color name="myyellow">#ffff00</color>
     <color name="colorPrimary">#75C958</color>
     <color name="colorPrimaryDark">#A9D899</color>
     <color name="colorAccent">#75C958</color>
