--- a/app/src/main/res/layout/stats_screen.xml
+++ b/app/src/main/res/layout/stats_screen.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
 
-    <com.github.mikephil.charting.charts.LineChart
+    <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
